# px4_multi_drone_sim

./: LICENSE  README.md  fast_commands.md
.devcontainer/: devcontainer.json
docker/: .env  Dockerfile  docker-compose.yml
docs/: main.md  states.md
docs/article/: article_en.md  article_ru.md  short_article.md
docs/documentation/en/: G_code_command.md  architecture_system.md  base_contrloller.md  dron_runner.md  drone_info_msg.md  drone_states.md  examples.md  g_code_commander.md  gzebo_launcher.md  offboard_commander.md  overview.md  x500_controller.md
docs/documentation/ru/: G_code_command.md  architecture_system.md  base_contrloller.md  dron_runner.md  drone_info_msg.md  drone_states.md  examples.md  g_code_commander.md  gzebo_launcher.md  offboard_commander.md  overview.md  x500_controller.md
multi_drone/: CMakeLists.txt  package.xml
multi_drone/config/: test_params.yaml
multi_drone/controllers/: base_controller.py  base_data.py
multi_drone/controllers/base/: base_controller.py  base_data.py  position_transformer.py
multi_drone/controllers/r1_rover/: r1_rover.py
multi_drone/controllers/x500/: states.py  x500.py  x500_base.py
multi_drone/launch/: test_gazebo.launch.py  test_multi_drone_run.launch.py  test_run.launch.py
multi_drone/move_commands/base/: base_commander.py  base_g_code.py
multi_drone/move_commands/g_code/: base_g_command.py  g_code.py
multi_drone/move_commands/x500/: commander.py  g_code.py
multi_drone/move_commands/x500/g_code/: __init__.py  base_move_command.py  g00.py  g01.py  g02.py  g03.py  g04.py  g05.py  g06.py  g20.py  g21.py  g22.py  g23.py  g24.py
multi_drone/scripts/: gazebo_server.py  runner.py
multi_drone/tests/: g21_move.py
multi_drone/utils/: geometry.py  methods.py
multi_drone_msg/: CMakeLists.txt  package.xml
multi_drone_msg/msg/: DroneInformMsg.msg  DroneParamsMsg.msg  RobotState.msg
