<?xml version="1.0"?>
<package format="3">
  <name>multi_drone_msg</name>
  <version>0.1.0</version>
  <description>Service package for multi-robot operations.</description>

  <maintainer email="anton42@yandex.ru">Anton Pisarenko</maintainer>
  <license>MIT</license>

  <!-- Зависимости для работы с ROS 2 -->
  <!-- <depend>rclpy</depend>
  <depend>rclcpp</depend> -->
  <depend>geometry_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
